# weather-server

./: Cargo.toml  README.md  schema.sql
src/: main.rs  noaa_api.rs
