[package]
name = "weather_server"
version = "0.1.0"
authors = ["jacobalbright"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
openssl = "0.10.35"