[package]
name = "weather_server"
version = "0.1.0"
authors = ["jacobalbright"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = "0.10.35"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["postgres", "chrono", "uuid", "runtime-actix-native-tls"] }
uuid = { version = "0.8", features = ["serde", "v4"] }